Remove warnings when running Java 24